Fix Emoji completion
This was broken in various ways; Tabbing between pages
was causing segfaults, and using the hover state like
this does not work anymore, with hover now being completely
managed by GTK. Use focus instead, and also fix up the
style.

--- a/gtk/theme/Adwaita/gtk-contained.css
+++ b/gtk/theme/Adwaita/gtk-contained.css
@@ -1998,11 +1998,13 @@ popover.emoji-picker emoji { font-size: x-large; padding: 6px; border-radius: 6p
 
 popover.emoji-picker emoji:hover { background: #3584e4; }
 
-popover.emoji-completion contents row box { border-spacing: 10px; padding: 2px 10px; }
+emoji-completion-row box { border-spacing: 10px; padding: 2px 10px; }
 
-popover.emoji-completion emoji:hover { background-color: white; }
+emoji-completion-row:focus, emoji-completion-row:hover { background-color: #3584e4; color: #ffffff; }
 
-popover.entry-completion contents { padding: 0; }
+emoji-completion-row emoji:focus, emoji-completion-row emoji:hover { background-color: white; }
+
+popover.entry-completion > contents { padding: 0; }
 
 menubar { padding: 0px; box-shadow: inset 0 -1px rgba(0, 0, 0, 0.1); }
 
